# dex-cli

./: Cargo.toml
src/: main.rs
src/docs/: call_ex.md  next_steps(dec23,2025).md
src/market/: constants.rs  marketstate.rs  mod.rs
src/models/: constants.rs  message_handler.rs  mod.rs  subscription.rs  websocket.rs
src/models/channels/: bbo.rs  mod.rs  trades.rs
