[package]
name = "Dex-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
